--- a/index.html
+++ b/index.html
@@ -3,10 +3,38 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
-    <title></title>
+    <title>infratop</title>
   </head>
-  
+
   <body>
+    <header>
+     <h1 class="heading">
+       <a href="index.html">
+       infratop
+       </a>
+     </h1>
+    </header>
+
+    <nav>
+      <ul class="nav-list">
+        <li class="nav-list-item">
+          <a href="index.html">webcamp</a>
+        </li>
+        <li class="nav-list-item">
+          <a href="index.html">webcamp pro</a>
+        </li>
+        <li class="nav-list-item">
+          <a href="index.html">wabcamp woman</a>
+        </li>
+        <li class="nav-list-item">
+          <a href="index.html">webcamp career</a>
+        </li>
+      </ul>
+    </nav>
     
+    <div class="main-visual">
+      
+    </div>
+
   </body>
 </html>
