--- a/index.html
+++ b/index.html
@@ -3,38 +3,28 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
-    <title>infratop</title>
+    <title>５章演習</title>
   </head>
 
   <body>
     <header>
-     <h1 class="heading">
-       <a href="index.html">
-       infratop
-       </a>
-     </h1>
+     <h1><a href="http://infratop.jp/">infratop</a></h1>
     </header>
 
     <nav>
       <ul class="nav-list">
+        <li class="nav-list-item"><a href="http://web-camp.io/">webcamp</a></li>
         <li class="nav-list-item">
-          <a href="index.html">webcamp</a>
+          <a href="http://web-camp.io/pro/">webcamp pro</a>
         </li>
         <li class="nav-list-item">
-          <a href="index.html">webcamp pro</a>
+          <a href="http://web-camp.io/woman/">wabcamp woman</a>
         </li>
         <li class="nav-list-item">
-          <a href="index.html">wabcamp woman</a>
-        </li>
-        <li class="nav-list-item">
-          <a href="index.html">webcamp career</a>
+          <a href="http://web-camp.io/career/">webcamp career</a>
         </li>
       </ul>
     </nav>
-
-    <div class="main-visual">
-      <div class="main-visual-content"></div>
-    </div>
 
     <div class="main">
       <div class="box1"></div>
